k8s-deploy/k3s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autolab-api
  labels:
    app: autolab-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autolab-api
  template:
    metadata:
      labels:
        app: autolab-api
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: autolab-api
        image: localhost:5000/autolab-api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        volumeMounts:
        - name: autolab-api-storage
          mountPath: /app/data
        - name: secret-volume
          mountPath: /var/secrets/
          readOnly: true
      volumes:
      - name: autolab-api-storage
        hostPath:
          path: /etc/autolab-data  # directory on your host
          type: DirectoryOrCreate    # will create it if it doesn't exist
      - name: secret-volume
        secret:
          secretName: autolab-api-secret
          items:
            - key: admins.txt
              path: admins.txt
---
apiVersion: v1
kind: Service
metadata:
  name: autolab-api
spec:
  selector:
    app: autolab-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
