k8s-deploy/pdfgen-k3s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autolab-pdfgen
  labels:
    app: autolab-pdfgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autolab-pdfgen
  template:
    metadata:
      labels:
        app: autolab-pdfgen
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: autolab-pdfgen
        image: localhost:5000/autolab-pdfgen:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: autolab-pdfgen
spec:
  selector:
    app: autolab-pdfgen
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
